[package]
name = "blockchain-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.16.2"
solana-transaction-status = "1.16.3"
rocket_contrib = "0.4.11"
bs58 = "0.5.0"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]